# pydb

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/backlog/: 02.md
src/mydb/file/: __init__.py  monolith.py  segment.py
src/mydb/interface/: file.py
src/pydb/: __init__.py  __main__.py
src/pydb/config/: __init__.py  exceptions.py
src/pydb/core/: __init__.py
src/pydb/core/file/: __init__.py  monolith.py  segment.py
src/pydb/core/index/: __init__.py  in_memory.py
src/pydb/core/storage/: __init__.py  logger.py
src/pydb/interface/: __init__.py  file.py  index.py  storage.py
tests/: test_index.py  test_logger.py
tests/storage/: README.md  test_index.py  test_logger.py
